objects/nFORCE__Group__c.object
<CustomObject>
    <description>Generalized grouping object.</description>
    <fields>
        <fullName>nFORCE__App__c</fullName>
        <description>This field is manually populated. It is required. This field is a unique identifier for the group and is used, in conjunction with a route&apos;s app, to uniquely identify a requested app.</description>
        <inlineHelpText>Enter the group portion of the requested app.

E.g. If the requested app is &apos;loan.change-product&apos;, then the group portion is &apos;loan&apos;.</inlineHelpText>
        <label>App</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nFORCE__Category__c</fullName>
        <description>Use this picklist field to indicate the category to which the group belongs. The picklist values describe different types of workflows.</description>
        <inlineHelpText>Indicate the category to which this group belongs.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Dashboard</fullName>
                </value>
                <value>
                    <fullName>Online Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. When enabled, It allows a questionnaire group to no longer be in use while retaining the questionnaire data. When disabled, the questionnaire group remains active. By default, this is disabled.</description>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Questionnaire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually populated. When enabled, it identifes a group as a questionnaire group rather than a standard UI group. When disabled, a gorup is not identified as a questionnaire. This field is disabled by default.</description>
        <label>Is Questionnaire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this lookup field to select the layout for the group.</description>
        <inlineHelpText>Select a layout for this group.</inlineHelpText>
        <label>Layout</label>
        <referenceTo>nFORCE__Layout__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Parent_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Establishes a relationship to another Group, allowing for a hierarchical connection between a base Group and its Sub-Groups.</description>
        <inlineHelpText>The name of the Group that this group is a Sub-Group of.</inlineHelpText>
        <label>Parent Group</label>
        <referenceTo>nFORCE__Group__c</referenceTo>
        <relationshipLabel>Parent Group</relationshipLabel>
        <relationshipName>Parent_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Screen used to render the content of this group. In the nCino UI this Screen will render in the Topbar.</description>
        <inlineHelpText>The Screen used to render the content of this group. In the nCino UI this Screen will render in the Topbar.</inlineHelpText>
        <label>Screen</label>
        <referenceTo>nFORCE__Screen__c</referenceTo>
        <relationshipLabel>Groups</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group</label>
    <listViews>
        <fullName>nFORCE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>